--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -309,11 +309,11 @@
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 my-2">
                         <div class="form-group">
-                            <textarea name="" id="" cols="30" rows="10" class="form-control rounded-3" placeholder="Message"></textarea>
+                            <textarea rows="6" class="form-control rounded-3" placeholder="Message"></textarea>
                         </div>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 my-2">
-                        <button class="btn btn-success btn-block">Get In Touch</button>
+                        <button class="btn btn-green btn-block" style="width: 100%;">Get In Touch</button>
                     </div>
                 </div>
             </div>
