--- a/aboutus.html
+++ b/aboutus.html
@@ -10,9 +10,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,8 +29,55 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" href="#">Home</a>
                     <a class="nav-link" href="#">About</a>
-                    <a class="nav-link" href="#">Service</a>
+                    <a class="nav-link dropdownmenu" href="#">Service 
+                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2.75 5.25L6 8.25L9.25 5.25" stroke="rgba(0,0,0,.55)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </a>
                     <a class="nav-link" href="#">Contact Us</a>
+
+                    
+                    <div class="submenu mobile-submenu">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-12">
+                                    <h5 class="h5 title-submenu">
+                                        Company
+                                    </h5>
+                                    <ul>
+                                        <li>
+                                            Sustainability Compliance
+                                        </li>
+                                        <li>
+                                            Education on Sustainability
+                                        </li>
+                                        <li>
+                                            Sustainability Program
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-12">
+                                    <h5 class="h5 title-submenu">
+                                        Environment
+                                    </h5>
+                                    <ul>
+                                        <li>
+                                            One integrated platform to measure impact
+                                        </li>
+                                        <li>
+                                            Data collection
+                                        </li>
+                                        <li>
+                                            Monitoring & Tracking
+                                        </li>
+                                        <li>
+                                            Prediction & Machine Learning
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -204,8 +250,9 @@
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-12 mobile-padding-x mobile-padding-y">
-                    
-                    <h6 class="h5 title-footer mb-4">Service</h6>
+                    <h6 class="h5 title-footer mb-4">
+                        Service
+                    </h6>
                     <ul>
                         <li>Environment</li>
                         <li>People</li>
@@ -244,6 +291,13 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <p>Gringgo©  2022</p>
+            <p> All Right Reserved</p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
