--- a/howitwork.html
+++ b/howitwork.html
@@ -86,7 +86,7 @@
 
     <!-- BIGBANNER -->
     <section id="bigBanner">
-        <img src="img/bigbanner.png" alt="image_banner" class="image-banner">
+        <img src="img/bigbanner.png" alt="image_banner" class="big-banner">
     </section>
     <!-- ENDBIGBANNER -->
 
@@ -216,7 +216,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div class="m-2 p-4 product-1">
+                    <div class="m-2 p-4 product">
                         <img src="img/image 25.jpg" alt="" class="img-product">
                         <div class="img-product-box p-4">
                             <div class="content mt-2">
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div class="m-2 p-4 product-1">
+                    <div class="m-2 p-4 product">
                         <img src="img/image 25.jpg" alt="" class="img-product">
                         <div class="img-product-box p-4">
                             <div class="content mt-2">
@@ -252,7 +252,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div class="m-2 p-4 product-1">
+                    <div class="m-2 p-4 product">
                         <img src="img/image 25.jpg" alt="" class="img-product">
                         <div class="img-product-box p-4">
                             <div class="content mt-2">
@@ -270,8 +270,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div class="m-2 p-4 product-2">
-                        <img src="img/image 23.jpg" alt="" class="img-product">
+                    <div class="m-2 p-4 product">
+                        <img src="img/image 25.jpg" alt="" class="img-product">
                         <div class="img-product-box p-4">
                             <div class="content mt-2">
                                 <h4 class="h4 text-title color-green">G-Collect</h4>
@@ -355,8 +355,10 @@
 
     <footer>
         <div class="container">
-            <p>Gringgo©  2022</p>
-            <p> All Right Reserved</p>
+            <div class="row justify-content-between py-4">
+                <span class="col-lg-2 col-md-2 col-sm-2">Gringgo©  2022</span>
+                <span class="col-lg-2 col-md-2 col-sm-2">All Right Reserved</span>
+            </div>
         </div>
     </footer>
 
