--- a/aboutus.html
+++ b/aboutus.html
@@ -294,10 +294,13 @@
 
     <footer>
         <div class="container">
-            <p>Gringgo©  2022</p>
-            <p> All Right Reserved</p>
+            <div class="row justify-content-between py-4">
+                <span class="col-lg-2 col-md-2 col-sm-2">Gringgo©  2022</span>
+                <span class="col-lg-2 col-md-2 col-sm-2">All Right Reserved</span>
+            </div>
         </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
