--- a/aboutus.html
+++ b/aboutus.html
@@ -226,8 +226,9 @@
     </section>
     <!-- ENDSPONSOR -->
 
-    <!-- FOOTER -->
-    <section id="footer">
+    
+     <!-- FOOTER -->
+     <section id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 mobile-padding-x mobile-padding-y">
@@ -236,50 +237,63 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et tempor incididunt dolor.
                     </p>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-12 mobile-padding-x mobile-padding-y">
-                    <h6 class="h5 title-footer mb-4">Company</h6>
-                    <ul>
-                        <li>About</li>
-                        <li>Contact Us</li>
-                        <li>Support Us</li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-12 mobile-padding-x mobile-padding-y">
-                    <h6 class="h5 title-footer mb-4">
-                        Service
-                    </h6>
-                    <ul>
-                        <li>Environment</li>
-                        <li>People</li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-12 mobile-padding-x mobile-padding-y">
-                    <h6 class="h5 title-footer mb-4">Legal</h6>
-                    <ul>
-                        <li>Privacy Policy</li>
-                        <li>Terms Conditions</li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-12 mobile-padding-x mobile-padding-y">
-                    <h6 class="h5 title-footer mb-4">Connect With Us</h6>
-                    <div class="d-flex">
-                        <div class="d-inline-block m-2">
-                            <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M28.1749 2.84111C27.3937 1.45151 26.5459 1.19591 24.8197 1.09871C23.0953 0.981705 18.7591 0.933105 15.0025 0.933105C11.2387 0.933105 6.90074 0.981706 5.17814 1.09691C3.45554 1.19591 2.60594 1.44971 1.81754 2.84111C1.01294 4.22891 0.598938 6.61931 0.598938 10.8277C0.598938 10.8313 0.598938 10.8331 0.598938 10.8331C0.598938 10.8367 0.598938 10.8385 0.598938 10.8385V10.8421C0.598938 15.0325 1.01294 17.4409 1.81754 18.8143C2.60594 20.2039 3.45374 20.4559 5.17634 20.5729C6.90074 20.6737 11.2387 20.7331 15.0025 20.7331C18.7591 20.7331 23.0953 20.6737 24.8215 20.5747C26.5477 20.4577 27.3955 20.2057 28.1767 18.8161C28.9885 17.4427 29.3989 15.0343 29.3989 10.8439C29.3989 10.8439 29.3989 10.8385 29.3989 10.8349C29.3989 10.8349 29.3989 10.8313 29.3989 10.8295C29.3989 6.61931 28.9885 4.22891 28.1749 2.84111Z" fill="white"/>
-                                <path d="M11.4014 16.2332V5.43323L20.4014 10.8332L11.4014 16.2332Z" fill="#232323"/>
-                            </svg>
+                <div class="col-lg-4 col-md-4 col-sm-12 mobile-padding-x mobile-padding-y">
+                    <div class="row">
+                        <div class="col col-lg-6 col-md-6">
+                            <h6 class="h5 title-footer mb-4">Company</h6>
+                            <ul>
+                                <li>About</li>
+                                <li>Contact Us</li>
+                                <li>Support Us</li>
+                            </ul>
                         </div>
-                        <div class="d-inline-block m-2">
-                            <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M23.7399 0.666504H4.2601C2.27555 0.666504 0.666687 2.2753 0.666687 4.25992V23.7398C0.666687 25.7244 2.27549 27.3332 4.2601 27.3332H13.8674L13.8838 17.804H11.4081C11.0864 17.804 10.8252 17.5438 10.824 17.2221L10.8121 14.1504C10.8109 13.8269 11.0728 13.564 11.3963 13.564H13.8675V10.596C13.8675 7.15167 15.9711 5.2762 19.0437 5.2762H21.565C21.8876 5.2762 22.1491 5.53772 22.1491 5.86037V8.45042C22.1491 8.77293 21.8878 9.03439 21.5653 9.03459L20.018 9.03531C18.347 9.03531 18.0235 9.82933 18.0235 10.9946V13.5641H21.6952C22.045 13.5641 22.3165 13.8696 22.2752 14.217L21.9112 17.2887C21.8763 17.5827 21.6271 17.8041 21.3311 17.8041H18.0399L18.0235 27.3334H23.74C25.7246 27.3334 27.3334 25.7246 27.3334 23.74V4.25992C27.3333 2.2753 25.7245 0.666504 23.7399 0.666504Z" fill="white"/>
-                            </svg>                        
+                        <div class="col col-lg-6 col-md-6">
+                            <h6 class="h5 title-footer mb-4">
+                                Service
+                            </h6>
+                            <ul>
+                                <li>Environment</li>
+                                <li>People</li>
+                            </ul>
                         </div>
-                        <div class="d-inline-block m-2">
-                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M21.3893 2.6665H10.6109C6.23047 2.6665 2.66675 6.23023 2.66675 10.6106V21.389C2.66675 25.7694 6.23047 29.3332 10.6109 29.3332H21.3893C25.7697 29.3332 29.3334 25.7694 29.3334 21.389V10.6106C29.3334 6.23023 25.7696 2.6665 21.3893 2.6665ZM26.6507 21.389C26.6507 24.2948 24.2951 26.6505 21.3893 26.6505H10.6109C7.70508 26.6505 5.34941 24.2948 5.34941 21.389V10.6106C5.34941 7.70479 7.70508 5.34917 10.6109 5.34917H21.3893C24.2951 5.34917 26.6507 7.70479 26.6507 10.6106V21.389Z" fill="white"/>
-                                <path d="M16.0007 9.10303C12.1977 9.10303 9.10376 12.197 9.10376 15.9999C9.10376 19.8029 12.1977 22.8969 16.0007 22.8969C19.8037 22.8969 22.8977 19.8029 22.8977 15.9999C22.8977 12.1969 19.8037 9.10303 16.0007 9.10303ZM16.0007 20.2143C13.6732 20.2143 11.7864 18.3275 11.7864 16C11.7864 13.6725 13.6733 11.7857 16.0007 11.7857C18.3282 11.7857 20.215 13.6725 20.215 16C20.215 18.3274 18.3282 20.2143 16.0007 20.2143Z" fill="white"/>
-                                <path d="M22.9102 10.8077C23.823 10.8077 24.5629 10.0678 24.5629 9.15509C24.5629 8.24236 23.823 7.50244 22.9102 7.50244C21.9975 7.50244 21.2576 8.24236 21.2576 9.15509C21.2576 10.0678 21.9975 10.8077 22.9102 10.8077Z" fill="white"/>
-                            </svg>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-12 mobile-padding-x mobile-padding-y">
+                    <div class="row">
+                        <div class="col">
+                            <div class="row">
+                                <div class="col col-lg-6 col-md-6">
+                                    <h6 class="h5 title-footer mb-4">Legal</h6>
+                                    <ul>
+                                        <li>Privacy Policy</li>
+                                        <li>Terms Conditions</li>
+                                    </ul>
+                                </div>
+                                <div class="col col-lg-6 col-md-6">
+                                    <h6 class="h5 title-footer mb-4">Connect With Us</h6>
+                                    <div class="d-flex">
+                                        <div class="d-inline-block m-2">
+                                            <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M28.1749 2.84111C27.3937 1.45151 26.5459 1.19591 24.8197 1.09871C23.0953 0.981705 18.7591 0.933105 15.0025 0.933105C11.2387 0.933105 6.90074 0.981706 5.17814 1.09691C3.45554 1.19591 2.60594 1.44971 1.81754 2.84111C1.01294 4.22891 0.598938 6.61931 0.598938 10.8277C0.598938 10.8313 0.598938 10.8331 0.598938 10.8331C0.598938 10.8367 0.598938 10.8385 0.598938 10.8385V10.8421C0.598938 15.0325 1.01294 17.4409 1.81754 18.8143C2.60594 20.2039 3.45374 20.4559 5.17634 20.5729C6.90074 20.6737 11.2387 20.7331 15.0025 20.7331C18.7591 20.7331 23.0953 20.6737 24.8215 20.5747C26.5477 20.4577 27.3955 20.2057 28.1767 18.8161C28.9885 17.4427 29.3989 15.0343 29.3989 10.8439C29.3989 10.8439 29.3989 10.8385 29.3989 10.8349C29.3989 10.8349 29.3989 10.8313 29.3989 10.8295C29.3989 6.61931 28.9885 4.22891 28.1749 2.84111Z" fill="white"/>
+                                                <path d="M11.4014 16.2332V5.43323L20.4014 10.8332L11.4014 16.2332Z" fill="#232323"/>
+                                            </svg>
+                                        </div>
+                                        <div class="d-inline-block m-2">
+                                            <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M23.7399 0.666504H4.2601C2.27555 0.666504 0.666687 2.2753 0.666687 4.25992V23.7398C0.666687 25.7244 2.27549 27.3332 4.2601 27.3332H13.8674L13.8838 17.804H11.4081C11.0864 17.804 10.8252 17.5438 10.824 17.2221L10.8121 14.1504C10.8109 13.8269 11.0728 13.564 11.3963 13.564H13.8675V10.596C13.8675 7.15167 15.9711 5.2762 19.0437 5.2762H21.565C21.8876 5.2762 22.1491 5.53772 22.1491 5.86037V8.45042C22.1491 8.77293 21.8878 9.03439 21.5653 9.03459L20.018 9.03531C18.347 9.03531 18.0235 9.82933 18.0235 10.9946V13.5641H21.6952C22.045 13.5641 22.3165 13.8696 22.2752 14.217L21.9112 17.2887C21.8763 17.5827 21.6271 17.8041 21.3311 17.8041H18.0399L18.0235 27.3334H23.74C25.7246 27.3334 27.3334 25.7246 27.3334 23.74V4.25992C27.3333 2.2753 25.7245 0.666504 23.7399 0.666504Z" fill="white"/>
+                                            </svg>                        
+                                        </div>
+                                        <div class="d-inline-block m-2">
+                                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M21.3893 2.6665H10.6109C6.23047 2.6665 2.66675 6.23023 2.66675 10.6106V21.389C2.66675 25.7694 6.23047 29.3332 10.6109 29.3332H21.3893C25.7697 29.3332 29.3334 25.7694 29.3334 21.389V10.6106C29.3334 6.23023 25.7696 2.6665 21.3893 2.6665ZM26.6507 21.389C26.6507 24.2948 24.2951 26.6505 21.3893 26.6505H10.6109C7.70508 26.6505 5.34941 24.2948 5.34941 21.389V10.6106C5.34941 7.70479 7.70508 5.34917 10.6109 5.34917H21.3893C24.2951 5.34917 26.6507 7.70479 26.6507 10.6106V21.389Z" fill="white"/>
+                                                <path d="M16.0007 9.10303C12.1977 9.10303 9.10376 12.197 9.10376 15.9999C9.10376 19.8029 12.1977 22.8969 16.0007 22.8969C19.8037 22.8969 22.8977 19.8029 22.8977 15.9999C22.8977 12.1969 19.8037 9.10303 16.0007 9.10303ZM16.0007 20.2143C13.6732 20.2143 11.7864 18.3275 11.7864 16C11.7864 13.6725 13.6733 11.7857 16.0007 11.7857C18.3282 11.7857 20.215 13.6725 20.215 16C20.215 18.3274 18.3282 20.2143 16.0007 20.2143Z" fill="white"/>
+                                                <path d="M22.9102 10.8077C23.823 10.8077 24.5629 10.0678 24.5629 9.15509C24.5629 8.24236 23.823 7.50244 22.9102 7.50244C21.9975 7.50244 21.2576 8.24236 21.2576 9.15509C21.2576 10.0678 21.9975 10.8077 22.9102 10.8077Z" fill="white"/>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -290,12 +304,11 @@
     <footer>
         <div class="container">
             <div class="row justify-content-between py-4">
-                <span class="col-lg-2 col-md-2 col-sm-2">Gringgo©  2022</span>
-                <span class="col-lg-2 col-md-2 col-sm-2">All Right Reserved</span>
+                <span class="col">Gringgo©  2022</span>
+                <span class="col" style="text-align: right;">All Right Reserved</span>
             </div>
         </div>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
